--- a/src/scss/public.scss
+++ b/src/scss/public.scss
@@ -1,7 +1,8 @@
 $primary:               #f5f5f5 !default;//主色
 
 #postcss{
-    background: $primary;
+    // background: $primary;
+    background: $primary url('../images/favicon.png') right center no-repeat;
     h1{
         width:100%;
         height:36px;
@@ -9,3 +10,13 @@ $primary:               #f5f5f5 !default;//主色
         color: darken($primary,30%);
     }
 }
+
+// #postcss{
+//     background: $primary url('../images/favicon.png') left center no-repeat;
+//     h1{
+//         width:100%;
+//         height:36px;
+//         line-height: 36px;
+//         color: darken($primary,30%);
+//     }
+// }
